--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- top-bannner -->
         <div class="banner">
-            <div class="container">
+            <div class="container flex top-banner">
                 <div class="small-bold-text banner-text">📢Figma prototype testing just got a whole lot better! Readmore</div>
             </div>
         </div>
@@ -38,14 +38,14 @@
 
         <!-- header-section -->
         <header>
-            <div class="container flex">
-                <div class="header-text">
+            <div class="container header flex">
+                <div class="header-text flex">
                     <h1>Design confidently.</h1>
                     <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
                     <a href="#" class="primary-button header-button">Getting Started</a>
                 </div>
 
-                <div class="header-image">
+                <div class="header-image flex">
                     <img src="assets/asset 1.jpeg">
                 </div>
             </div>
